# dialectical-chess

./: .gitignore  README.md  pyproject.toml
dialectical_chess/: __init__.py  adapters.py  argumentation_cartridge.py  arguments.py  baselines.py  bench.py  bench_cli.py  bench_epd.py  bench_lichess.py  bench_matrix.py  board.py  core_labels.py  decide.py  engine.py  epd.py  evidence.py  forced_loss.py  graded_policy.py  loss_mining.py  matches.py  matrix_summary.py  move_argument.py  opinion_graph.py  optimizer.py  owned_cli.py  pgn_diagnostics.py  positional_summary.py  probe.py  probe_cli.py  random_uci.py  reply_mate_scan.py  scheme.py  scoring.py  search.py  search_backends.py  skeptical_filter.py  smt.py  static_prior.py  suppression.py  tactical_witness_summary.py  (+2 more)
dialectical_chess/fixtures/: dialectical_chess_openings.epd  dialectical_chess_puzzles_sample.csv  dialectical_chess_smoke.epd
dialectical_chess/heuristics/: evidence.py  forks.py  king_safety.py  opening.py  piece_safety.py  positional.py  reply.py  standard.py  strategy.py
docs/: semantics.md
reports/: argdriven-phase0-coder.md  argdriven-phase2-coder-resume.md  argdriven-phase2-design-v2.md  argdriven-phase3-coder.md  codex-argdriven-plan-review.md  codex-phase2-design-review.md  phase1-board-analyst.md
scripts/: chunkg_fix_queen_flank_invasion_probe.py  chunkh_fix_f11_causal_chain.py  f11_emitter_fix_verify.py
tests/: _label_helpers.py  test_argumentation_thesis.py  test_bench_scoring.py  test_board_differential.py  test_board_fen.py  test_cartridge_seam.py  test_chunkf_properties.py  test_core_labels.py  test_dialectical_chess_cleanup.py  test_dialectical_chess_engine_api.py  test_dialectical_chess_evidence_ablation.py  test_dialectical_chess_loss_mining.py  test_draw_detection.py  test_graded_policy.py  test_parser_errors.py  test_static_prior.py  test_tuning.py
workstreams/: aspic-shape-arguments-2026-05-21.md  typed-argumentation-evidence-2026-05-20.md
